--- a/core/python/src/app/onbox/config.json
+++ b/core/python/src/app/onbox/config.json
@@ -1,26 +1,38 @@
 {
     "config": {
-
-    	"node_type": "active",
     	"ec2_private_endpoint_url": "https://vpce-0786bfdf8aad8840c-vacmlroq-us-west-2a.ec2.us-west-2.vpce.amazonaws.com",
-    	"self_grpc_ip": "127.0.0.1",
-    	"self_grpc_port": "57777",
-    	"node_priority": "0",
-    	"preempt": false,
-    	"primary_ha_intf": {
-    		"name": "TenGigE0/0/0/2",
-    		"instance_intf_number": 2,
-    		"secondary_ip": "172.31.105.10",
-    		"neigh_ip": "172.31.105.206"
-    	},
-    	"secondary_ha_intf": {
-    		"name": "TenGigE0/0/0/1",
-    		"neigh_ip": "172.31.101.101"
-    	},
-    	"BFDDesiredTxIntUsec": 50000,
-        "DetectMultiplier": 3
-
+    	"grpc_server": "127.0.0.1",
+    	"grpc_port": 57777,
+        "action": {
+            "method": "secondary_ip_shift",
+            "method_params": {
+            	"intf_list": [
+            		{
+            			"secondary_ip": "172.31.105.10",
+			            "instance_intf_number": 2
+            		}
+            	]
+            }
+        },
+    	"bfd_sessions": [
+    		{
+    			"session_type": "SINGLE_HOP",
+	    		"intf_name": "TenGigE0/0/0/2",
+	    		"neigh_ip": "172.31.105.206",
+	    		"bfd_desired_tx_int_usec": 50000,
+		        "detect_multiplier": 3,
+		        "vrf_name": "default"
+    	    },
+            {
+            	"session_type": "SINGLE_HOP",
+            	"intf_name": "TenGigE0/0/0/1",
+    		    "neigh_ip": "172.31.101.101",
+	    		"bfd_desired_tx_int_usec": 50000,
+		        "detect_multiplier": 3,
+		        "vrf_name": "default"
+            }
+    	]
+    	
     }
-
 
 }
