Docker Stop cleanup and bgsave for show commands

--- a/core/python/Dockerfile
+++ b/core/python/Dockerfile
@@ -16,15 +16,17 @@ FROM python:3.8.0-slim as app
 COPY --from=builder /root/.local /root/.local
 COPY --from=builder /app /app
 
+RUN apt-get update && apt-get install -y redis-server jq procps && \
+    apt-get clean
+
+WORKDIR app
+ENV PATH=/root/.local/bin:$PATH
+COPY redis.conf /etc/redis/redis.conf
 COPY src/genpy /genpy
 COPY supervisord.conf /etc/supervisord.conf
 COPY show /root/.local/bin/show
 
-RUN apt-get update && apt-get install -y redis-server jq && \
-    apt-get clean
-WORKDIR app
-ENV PATH=/root/.local/bin:$PATH
-
 # Open the port
 EXPOSE  6379:6379
-ENTRYPOINT  supervisord -c /etc/supervisord.conf -n
+
+CMD ["/usr/local/bin/python3", "/root/.local/bin/supervisord", "-c", "/etc/supervisord.conf", "-n"]
