Ansible+Cloudformation based test topology

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -3,14 +3,12 @@ FROM python:3.8-slim
 # Labels.
 
 COPY requirements.yml /root/requirements.yml  
-RUN python3 -m pip install --upgrade ncclient pyats genie ansible-core boto3 && \
+RUN python3 -m pip install --upgrade ansible-core boto3 scp && \
     apt-get update && \
-    apt-get install -y git openssh-client && \
+    apt-get install -y openssh-client && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
-    ansible-galaxy collection install cisco.iosxr community.aws amazon.aws ansible.netcommon && \
-    ansible-galaxy install -r /root/requirements.yml -p /root/.ansible/roles
-
+    ansible-galaxy collection install cisco.iosxr community.aws amazon.aws ansible.netcommon
 
 CMD [ "ansible-playbook", "--version" ]
 
